@@ -277,8 +277,8 @@ config:
     input:
       user_agent_string: 'Mozilla/4.0 (compatible; MSIE 8.0; Windows NT 6.1; Trident/4.0; @Oj~?JYJ4Uig}MTTl|@Jr6js/DrNZl@zO/se+/; GTB7.5; SLCC2; .NET CLR 2.0.50727; .NET CLR 3.5.30729; .NET CLR 3.0.30729; Media Center PC 6.0; Tablet PC 2.0)'
     expected:
-      DeviceClass                          : 'Desktop'
-      DeviceName                           : 'Desktop'
+      DeviceClass                          : 'Tablet'
+      DeviceName                           : 'Tablet PC'
       DeviceBrand                          : 'Unknown'
       OperatingSystemClass                 : 'Desktop'
       OperatingSystemName                  : 'Windows NT'
