@@ -42,3 +42,9 @@ Win 9x 4.90|Windows 9x|Windows Millennium Edition
 Windows 98|Windows 9x|Windows 98
 Windows 95|Windows 9x|Windows 95
 Windows CE|Windows CE|Windows CE
+
+# Shortened versions of the names
+Win98|Windows 9x|Windows 98
+Win95|Windows 9x|Windows 95
+WinCE|Windows CE|Windows CE
+WinXP|Windows NT|Windows XP
