@@ -55,6 +55,10 @@ config:
       "Windows 98" : "Windows 9x"
       "Windows 95" : "Windows 9x"
       "Windows CE" : "Windows CE"
+      "Win98" : "Windows 9x"
+      "Win95" : "Windows 9x"
+      "WinCE" : "Windows CE"
+      "WinXP" : "Windows NT"
 - lookup:
     name: 'OperatingSystemVersion'
     map:
@@ -92,3 +96,7 @@ config:
       "Windows 98" : "Windows 98"
       "Windows 95" : "Windows 95"
       "Windows CE" : "Windows CE"
+      "Win98" : "Windows 98"
+      "Win95" : "Windows 95"
+      "WinCE" : "Windows CE"
+      "WinXP" : "Windows XP"
