@@ -807,3 +807,129 @@ config:
       AgentNameVersion                     : 'AdsBot-Google-Mobile-Apps ??'
       AgentNameVersionMajor                : 'AdsBot-Google-Mobile-Apps ??'
       AgentInformationUrl                  : 'http://www.google.com/bot.html'
+
+
+# https://developers.google.com/speed/docs/insights/faq#whyonlinediff
+- matcher:
+    require:
+    - 'agent.product.(1)comments.entry="Google Page Speed Insights"'
+    extract:
+    - '__Set_ALL_Fields__                   :  9999:"<<<null>>>"' # Must be 1 lower than the rest (or you will wipe yourself too)
+    - 'DeviceClass                          : 10000:"Robot"'
+    - 'DeviceName                           : 10000:"Google"'
+    - 'DeviceBrand                          : 10000:"Google"'
+    - 'DeviceVersion                        : 10000:"Google Page Speed Insights"'
+    - 'DeviceFirmwareVersion                : 10000:"Google"'
+    - 'OperatingSystemClass                 : 10000:"Cloud"'
+    - 'OperatingSystemName                  : 10000:"Google"'
+    - 'OperatingSystemVersion               : 10000:"Google"'
+    - 'OperatingSystemNameVersion           : 10000:"Google"'
+    - 'LayoutEngineClass                    : 10000:"Robot"'
+    - 'LayoutEngineName                     : 10000:"Google Page Speed Insights"'
+    - 'LayoutEngineVersion                  : 10000:"??"'
+    - 'AgentClass                           : 10000:"Robot"'
+    - 'AgentName                            : 10000:"Google Page Speed Insights"'
+    - 'AgentVersion                         : 10000:"??"'
+
+- test:
+    input:
+      user_agent_string: 'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko; Google Page Speed Insights) Chrome/27.0.1453 Safari/537.36'
+    expected:
+      DeviceClass                          : 'Robot'
+      DeviceName                           : 'Google'
+      DeviceBrand                          : 'Google'
+      DeviceFirmwareVersion                : 'Google'
+      DeviceVersion                        : 'Google Page Speed Insights'
+      OperatingSystemClass                 : 'Cloud'
+      OperatingSystemName                  : 'Google'
+      OperatingSystemVersion               : 'Google'
+      OperatingSystemNameVersion           : 'Google'
+      LayoutEngineClass                    : 'Robot'
+      LayoutEngineName                     : 'Google Page Speed Insights'
+      LayoutEngineVersion                  : '??'
+      LayoutEngineVersionMajor             : '??'
+      LayoutEngineNameVersion              : 'Google Page Speed Insights ??'
+      LayoutEngineNameVersionMajor         : 'Google Page Speed Insights ??'
+      AgentClass                           : 'Robot'
+      AgentName                            : 'Google Page Speed Insights'
+      AgentVersion                         : '??'
+      AgentVersionMajor                    : '??'
+      AgentNameVersion                     : 'Google Page Speed Insights ??'
+      AgentNameVersionMajor                : 'Google Page Speed Insights ??'
+
+# https://support.google.com/webmasters/answer/1062498?hl=en
+
+- matcher:
+    require:
+    - 'agent.product.(1)comments.entry[1-2]="Google Web"'
+    extract:
+    - '__Set_ALL_Fields__                   :  9999:"<<<null>>>"' # Must be 1 lower than the rest (or you will wipe yourself too)
+    - 'DeviceClass                          : 10000:"Robot"'
+    - 'DeviceName                           : 10000:"Google"'
+    - 'DeviceBrand                          : 10000:"Google"'
+    - 'DeviceVersion                        : 10000:agent.product.(1)comments.entry[1-3]="Google Web Preview"@'
+    - 'DeviceFirmwareVersion                : 10000:"Google"'
+    - 'OperatingSystemClass                 : 10000:"Cloud"'
+    - 'OperatingSystemName                  : 10000:"Google"'
+    - 'OperatingSystemVersion               : 10000:"Google"'
+    - 'OperatingSystemNameVersion           : 10000:"Google"'
+    - 'LayoutEngineClass                    : 10000:"Robot"'
+    - 'LayoutEngineName                     : 10000:agent.product.(1)comments.entry[1-3]="Google Web Preview"@'
+    - 'LayoutEngineVersion                  : 10000:"??"'
+    - 'AgentClass                           : 10000:"Robot"'
+    - 'AgentName                            : 10000:agent.product.(1)comments.entry[1-3]="Google Web Preview"@'
+    - 'AgentVersion                         : 10000:"??"'
+
+- test:
+    input:
+      user_agent_string: 'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko; Google Web Preview) Chrome/27.0.1453 Safari/537.36'
+    expected:
+      DeviceClass                          : 'Robot'
+      DeviceName                           : 'Google'
+      DeviceBrand                          : 'Google'
+      DeviceFirmwareVersion                : 'Google'
+      DeviceVersion                        : 'Google Web Preview'
+      OperatingSystemClass                 : 'Cloud'
+      OperatingSystemName                  : 'Google'
+      OperatingSystemVersion               : 'Google'
+      OperatingSystemNameVersion           : 'Google'
+      LayoutEngineClass                    : 'Robot'
+      LayoutEngineName                     : 'Google Web Preview'
+      LayoutEngineVersion                  : '??'
+      LayoutEngineVersionMajor             : '??'
+      LayoutEngineNameVersion              : 'Google Web Preview ??'
+      LayoutEngineNameVersionMajor         : 'Google Web Preview ??'
+      AgentClass                           : 'Robot'
+      AgentName                            : 'Google Web Preview'
+      AgentVersion                         : '??'
+      AgentVersionMajor                    : '??'
+      AgentNameVersion                     : 'Google Web Preview ??'
+      AgentNameVersionMajor                : 'Google Web Preview ??'
+
+
+
+- test:
+    input:
+      user_agent_string: 'Mozilla/5.0 AppleWebKit/537.36 (KHTML, like Gecko; Google Web Preview Analytics) Chrome/27.0.1453 Safari/537.36 (compatible; Googlebot/2.1; +http://www.google.com/bot.html)'
+    expected:
+      DeviceClass                          : 'Robot'
+      DeviceName                           : 'Google'
+      DeviceBrand                          : 'Google'
+      DeviceFirmwareVersion                : 'Google'
+      DeviceVersion                        : 'Google Web Preview Analytics'
+      OperatingSystemClass                 : 'Cloud'
+      OperatingSystemName                  : 'Google'
+      OperatingSystemVersion               : 'Google'
+      OperatingSystemNameVersion           : 'Google'
+      LayoutEngineClass                    : 'Robot'
+      LayoutEngineName                     : 'Google Web Preview Analytics'
+      LayoutEngineVersion                  : '??'
+      LayoutEngineVersionMajor             : '??'
+      LayoutEngineNameVersion              : 'Google Web Preview Analytics ??'
+      LayoutEngineNameVersionMajor         : 'Google Web Preview Analytics ??'
+      AgentClass                           : 'Robot'
+      AgentName                            : 'Google Web Preview Analytics'
+      AgentVersion                         : '??'
+      AgentVersionMajor                    : '??'
+      AgentNameVersion                     : 'Google Web Preview Analytics ??'
+      AgentNameVersionMajor                : 'Google Web Preview Analytics ??'
