@@ -121,3 +121,8 @@ v1.4
 - Rewrote the yaml reading to allow reporting the filename and line numbers.
 - Added overwrite for specific Lenovo Tablets that do not conform to normal conventions.
 - Made the Analyzer Serializable which should make using it in distributed systems easier.
+- Improve the detection of certain Robots and the old Tablet PC
+
+
+
+
